--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,11 @@ h1, h2, h3 {
   font-weight: 700;
 }
 
+.spaced-title {
+  margin-bottom: 20px;
+  display: block;
+}
+
 h3 { 
   font-size: 18px;
 }
@@ -230,7 +235,7 @@ h1 {
 
 @media (max-width: 767px) {
   #main-container{
-    padding-top: 0px
+    padding-top: 15px
   }
 }
 
